<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rogeriofidelix.com.br.pokeappd.DetailActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pokenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PokeNames"
                android:text="@string/_1"/>

            <TextView
                android:id="@+id/pokename"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/PokeNames"
                android:text="@string/charizard"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/pokeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/char3"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary">
        </View>

        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary">
        </View>

        <TextView
            android:id="@+id/pokeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/giant_description"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary">
        </View>

        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hability"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="50"
                    android:id="@+id/tvHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    style="@style/PokeNames"
                    android:textAlignment="center"/>



                <TextView
                    android:layout_weight="50"
                    android:id="@+id/tvSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PokeNames"
                    android:textAlignment="center"
                    android:text="8"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hp"
                    android:layout_weight="50"
                    android:textAlignment="center"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:layout_weight="50"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAtack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    style="@style/PokeNames"
                    android:layout_weight="50"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/tvDefense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PokeNames"
                    android:text="5"
                    android:layout_weight="50"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attack"
                    android:layout_weight="50"
                    android:textAlignment="center"/>

                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defense"
                    android:layout_weight="50"
                    android:textAlignment="center"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary">
            </View>

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
